--- a/uav_gazebo_msgs/package.xml
+++ b/uav_gazebo_msgs/package.xml
@@ -12,6 +12,7 @@
 
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>dynamic_reconfigure</depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
 
