Publish odometry + documentation
The drone will now publish its pose and twist on the topic "odometry"

--- a/uav_gazebo/package.xml
+++ b/uav_gazebo/package.xml
@@ -12,6 +12,7 @@
   <depend>gazebo_ros</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>uav_gazebo_msgs</depend>
   <depend>roscpp</depend>
   <depend>angles</depend>
